--- a/src/my_robot_cell/my_robot_cell_moveit_config/config/moveit_controllers.yaml
+++ b/src/my_robot_cell/my_robot_cell_moveit_config/config/moveit_controllers.yaml
@@ -17,3 +17,5 @@ moveit_simple_controller_manager:
       - ur5e_wrist_1_joint
       - ur5e_wrist_2_joint
       - ur5e_wrist_3_joint
+    action_ns: follow_joint_trajectory
+    default: true
