--- a/src/my_robot_cell/my_robot_cell_moveit_config/package.xml
+++ b/src/my_robot_cell/my_robot_cell_moveit_config/package.xml
@@ -6,7 +6,7 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the my_robot_cell with the MoveIt Motion Planning Framework
   </description>
-  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
+  <maintainer email="sohaibshehabsnouber@gmail.com">sohaib</maintainer>
 
   <license>BSD-3-Clause</license>
 
@@ -14,7 +14,7 @@
   <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit2</url>
 
-  <author email="exner@fzi.de">Felix Exner</author>
+  <author email="sohaibshehabsnouber@gmail.com">sohaib</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
